# kaxapage

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  build.rs  docker-compose.yml  run
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.sqlx/: query-0379b2c36aeb9d4e695e952ff6a252f5adccc5e609a7dbf60d8a0985cc9d0653.json  query-0cd74a8b0a52ac2d605a0f201d2e6e8e5c577ef2f7cc723e550332ff98357d81.json  query-17ae05833ad38c1f2a1b32308bd3d5b43a253585e5e810b2feb099d841136d7f.json  query-1b7f387baa22ef053917e23bb4142a5f64383d1f419af5510332d23107e2c315.json  query-272182b1a9ef28b72e8030868a285f7f2ecb6d9355dc50a362ba4830b798431d.json  query-2dce03baeaaaf17b62e056e0a45b1d9ff49f75366d4fd7aae8531ff9c6c20fd9.json  query-314c05bcc37843b2f2025534fe2679cecc3bcc9de5999781ec07f5aeb5af8424.json  query-319a5c65488e69b8842fd83e6d96f6cc816c2289cc1a52a3f384c53f90d1b71f.json  query-335779494221ea3682f68eab9789a88f6423ea0d44af26a77ec6af846fcb8e89.json  query-33ac3fd11b9d1f92e2a23bcc2070490c9f59147de74126fc82c6a57e0627658a.json  query-42f58da42f851214663f98f8d3f2dea63b882e43ca45b392ebf8d7f2893b1905.json  query-47930bc6fdafae42ea762f43d2d34bdb7bd5ea5a697886a2fb79bd2aae1d935f.json  query-5b8142d58b05acd6f23a9cc222291b6f951191173e5e1149c7e544f56a9bff9b.json  query-642557567bb4239175b93d7d936607170497b5f5a2f09958cbafa1972d78501e.json  query-702342132574335bb55218660ac200bafbb82a5580560294fbd02363e97c9770.json  query-79c358d5c677c8716eed6281f46e1b05ad23744a44a4bef24e982f5552147255.json  query-825f4f53df941e5da6cb6103905a1d0e726fcdc660c83ed1732defe5f4be8897.json  query-83e61989fff57a52df86c281b7b947a6cc0480b445176112deb92f899701db5a.json  query-881b6e2fdf25a9ee90feeddebb20ec5a132654d65f65bd1bac87c745fc4c660d.json  query-979a46e3ecafbbaed16f0e22d3a2af666d08e446bc02e819fcafacf48717cc7d.json  query-9946b123dd98ac88b3c8e2671ad3678cffad6094c2a7a7a7068ec174b1f38221.json  query-9d39f3ab129bbe4cc604527d53f238b8be333d01381cefdb6ff9604226789561.json  query-a69b5457d9bb4cb05348f3ee38a63b7cfc41e1db92a6e3610a470bd13c6e4db2.json  query-a90f6e94608d4fdef3475e84b5b47f8e776ec89738a6e4048691c219c8643844.json  query-ac82088113aa309367f20b4f41f6e68b6cdbee9cf1cda2d492ebfb76a7a3df56.json  query-c6aee82fb9e88b823ea130840d2650039aabf836b26224f75353b9c034afc421.json  query-c6af79b064de6f9147f16b4640ec867b8b56978c72e034f263783ccdec653ef7.json  query-cdeab646228080585a31f810852a9591512f1e67958a23c036fccee2441e0ca8.json  query-da2c6a4dd2cc8d0deb9d7a94e959bbcb12306c348247beffa04884aa45a50fb8.json  query-ddb28a833bb99e1d732032564417a9712398d5de8f0674a7e2cfb87a5c9d58f3.json  query-ee0e3071efd84bcf2bfee64f8bbca22ae5535c3a3eda4559bb0e63ca09b75ef0.json  query-f0f4ed50be925119744f7e632597cc72cc9887b9fda7773d301368b139d33ae8.json  (+2 more)
migrations/: 001_init.sql  002_indexes.sql  (+1 more)
src/: app.rs  (+3 more)
(+34 files in other folders)
