# Cargo.toml
[package]
name = "kaxapage"
version = "1.1.0"
edition = "2021"
rust-version = "1.75"
build = "build.rs"
description = "A self-hosted status page service built with Rust and Vue 3"
repository = "https://github.com/redj45/kaxapage"
homepage = "https://github.com/redj45/kaxapage"
documentation = "https://github.com/redj45/kaxapage#readme"
license = "AGPL-3.0"
email = "pischuhin@gmail.com"
authors = ["KaxaPage Contributors"]
keywords = ["status-page", "monitoring", "self-hosted", "axum", "vue"]
categories = ["web-programming::http-server", "command-line-utilities"]
readme = "README.md"

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"

rust-embed = "8"
mime_guess = "2"
governor = "0.10"

[dev-dependencies]
axum-test = "20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
